--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SISTEMA54 Digital</title>
-    <!-- Favicon verrà aggiornato dinamicamente dall'app -->
+    <title>GIT - Gestione Interventi Tecnici</title>
+    <link rel="icon" type="image/png" href="/favicon.png" />
   </head>
   <body>
     <div id="root"></div>
